# holysheet

./: .gitignore  .pre-commit-config.yaml  GOOGLE_LOGIN_SETUP.md  GOVERNANCE.md  LICENSE  PROJECT_STATUS.md  README.md  SECURITY.md  _version.py  app.py  app_v2.py  auth_upgrade_plan.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
auth/: __init__.py  google_auth.py  session_manager.py  ui_components.py
internal/: COMPETITIVE_ANALYSIS.md  COMPETITOR_ANALYSIS_AIASSISTWORKS.md  README.md
scripts/: CLAUDE.md  claude_sheets_assistant.py  claude_sheets_example.py  corrected_apps_script.js  google_apps_script_claude.js  secure_apps_script.js  setup_sheets_assistant.sh  setup_webapp.sh  test_continue.py  test_lmstudio.py
static/js/: app.js
templates/: account.html  index.html  profile.html
tests/: __init__.py  test_app.py
wiki/: API-Costs.md  API-Setup.md  Contributing.md  First-Analysis.md  Home.md  Installation-Guide.md  README-WIKI.md  Troubleshooting.md  Usage-Tips.md
